<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ee193take2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.ee193take2.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_db_testing"
        android:name="com.example.ee193take2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/class_Home"
        android:name="com.example.ee193take2.Class_Home"
        android:label="fragment_class__home"
        tools:layout="@layout/fragment_class__home" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ee193take2.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/add_Class"
        android:name="com.example.ee193take2.Add_Class"
        android:label="fragment_add__class"
        tools:layout="@layout/fragment_add__class" />
    <fragment
        android:id="@+id/class_Info"
        android:name="com.example.ee193take2.Class_Info"
        android:label="fragment_class__info"
        tools:layout="@layout/fragment_class__info" />
    <fragment
        android:id="@+id/class_Offerings"
        android:name="com.example.ee193take2.Class_Offerings"
        android:label="fragment_class__offerings"
        tools:layout="@layout/fragment_class__offerings" />
    <fragment
        android:id="@+id/class_Statistics"
        android:name="com.example.ee193take2.class_Statistics"
        android:label="fragment_class__statistics"
        tools:layout="@layout/fragment_class__statistics" />
    <fragment
        android:id="@+id/class_Students"
        android:name="com.example.ee193take2.Class_Students"
        android:label="fragment_class__students"
        tools:layout="@layout/fragment_class__students" />
</navigation>